added blur and updated window decorations

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -83,8 +83,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 1
+    gaps_out = 2
 
     border_size = 2
 
@@ -103,7 +103,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 2
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -120,10 +120,11 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        size = 2                   
+        passes = 3
+        new_optimizations = true  
+        xray = true
+        ignore_opacity = false    
     }
 }
 
