--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -54,9 +54,18 @@ exec-once = waybar
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
+# cursor env
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# wayland env
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
+# nvidia and hardware acceleration env
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
+env = MOZ_DISABLE_RDD_SANDBOX,1
 
 ###################
 ### PERMISSIONS ###
