--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar
-
+exec-once = "$HOME/.config/hypr/scripts/init.sh"
 
 #############################
 ### ENVIRONMENT VARIABLES ###
