updating starting command of code

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -34,6 +34,7 @@ monitor=eDP-1,1920x1080@144,0x0,1
 $terminal = wezterm
 $fileManager = wezterm start yazi
 $menu = rofi -show drun
+$switchWall = "$HOME/.local/bin/wall.sh"
 
 
 #################
@@ -45,7 +46,7 @@ $menu = rofi -show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar
+exec-once = waybar & swww-daemon
 exec-once = eval "$(ssh-agent -s)"
 exec-once = "$HOME/.config/hypr/scripts/init.sh"
 exec-once = systemctl --user start hyprpolkitagent
@@ -302,6 +303,10 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Wallpaper binds
+bind = $mainMod, W, exec, $switchWall 1
+bind = $SUPER_SHIFT, W, exec, $switchWall 0
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
