--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -304,9 +304,10 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Wallpaper binds
+# Custom Binds
 bind = $mainMod, W, exec, $switchWall 1
 bind = $SUPER_SHIFT, W, exec, $switchWall 0
+bind = $SUPER_SHIFT, L, exec, hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
