--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -22,7 +22,7 @@ image {
     path = ~/.cache/face
     border_size = 2
     border_color = rgba(255, 255, 255, 0)
-    size = 130
+    size = 200
     rounding = -1
     rotate = 0
     reload_time = -1
@@ -38,7 +38,7 @@ label {
     text = cmd[update:1000] echo -e "$(date +"%A, %B %d")"
     color = rgba(216, 222, 233, 0.70)
     font_size = 25
-    font_family = FantasqueSansM Nerd Font
+    font_family = Inter ExtraBold
     position = 0, 350
     halign = center
     valign = center
@@ -50,7 +50,7 @@ label {
     text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
     color = rgba(216, 222, 233, 0.70)
     font_size = 120
-    font_family = FantasqueSansM Nerd Font
+    font_family = Inter ExtraBold
     position = 0, 250
     halign = center
     valign = center
@@ -101,7 +101,7 @@ input-field {
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
     font_family = FantasqueSansM Nerd Font
-    placeholder_text = <i><span foreground="##ffffff99"> password</span></i>
+    placeholder_text = <i><span foreground="##ffffff99"></span></i>
     hide_input = false
     position = 0, -210
     halign = center
